# SFML

./: .gitignore
minusculo/: .gitignore  CMakeLists.txt  main.cpp
minusculo/include/: Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  Foreach.hpp  Game.hpp  Insect.hpp  Player.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIndentifiers.hpp  SceneNode.hpp  SpriteNode.hpp  StringHelpers.hpp  StringHelpers.inl  World.hpp
minusculo/src/: Command.cpp  CommandQueue.cpp  Entity.cpp  Game.cpp  Insect.cpp  Main.cpp  Player.cpp  ResourceHolder.cpp  SceneNode.cpp  SpriteNode.cpp  World.cpp
